--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "server=192.168.1.12; port=3306; database=gestion_creditos ;user=root; password=root;"
+    //"DefaultConnection": "server=192.168.10.117; port=3306; database=gestion_creditos ;user=root; password=root;"
   },
   "Logging": {
     "LogLevel": {
